--- a/data/UFC-Know-Event.json
+++ b/data/UFC-Know-Event.json
@@ -43,8 +43,8 @@
         "id": 6,
         "mainImg": "/ufc-data/media/html/event/image/6.jpg",
         "rank": 75,
-        "title": "拳法大战桑托斯判定终获胜",
-        "sortDesc": "桑托斯以一致判定击败了首次登陆八角笼的伊万诺夫",
+        "title": "纳干诺45秒干翻布莱兹 中国6将取豪胜",
+        "sortDesc": "纳干诺仅用时45秒就TKO终结了布莱兹",
         "url": "/ufc-data/media/html/event/6.html"
     }
 ]
